# arrow-wasm-cpp

./: .gitignore  CMakeLists.txt  README.md  babel.config.js  package.json
.github/workflows/: build.yml
cmake/: arrow.txt.in  rapidjson.txt.in
cmake/arrow/: CMakeLists.txt  config.h
scripts/: clean.js  install_emsdk.js  run_emsdk.js
src/: emscripten.cpp
src/cpp/arrow/: CMakeLists.txt  build.js
src/cpp/arrow/src/cpp/: base.cpp  emscripten.cpp
src/cpp/arrow/src/include/arrow/: emscripten.h
src/cpp/arrow/src/include/exprtkjs/: emscripten.h
src/js/: test.js
